# InteliMarket

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
api/: Dockerfile
api/alembic/: env.py
api/src/: config.py  db.py  main.py
api/src/auth/: jwt.py  models.py  router.py  schemas.py
api/src/companies/: models.py  router.py  schemas.py  service.py
api/src/currency/: models.py  router.py  schemas.py  service.py
api/src/customers/: models.py  router.py  schemas.py  service.py
api/src/inventory/: models.py  router.py  schemas.py  service.py
api/src/payments/: models.py  router.py  schemas.py  service.py
api/src/products/: models.py  router.py  schemas.py  service.py
api/src/purchases/: models.py  router.py  schemas.py  service.py  supplier_models.py
api/src/sales/: models.py  router.py  schemas.py  service.py
api/src/sifen/: cdc.py  client.py  models.py  router.py  schemas.py  service.py  xml_generator.py
api/src/tenants/: models.py  router.py  schemas.py  service.py
db/: schema.sql
docs/: ARCHITECTURE.md  BACKLOG.md  FISCAL_PY_RULES.md  INTEGRATIONS.md  PRD.md  ROADMAP.md
infra/: docker-compose.yml
ui-web/: index.html  package.json  tailwind.config.js  vite.config.ts
ui-web/src/: App.tsx  index.css
ui-web/src/api/: index.ts
ui-web/src/components/: Layout.tsx  Logo.tsx
ui-web/src/context/: AuthContext.tsx  ThemeContext.tsx
ui-web/src/pages/: Dashboard.tsx  Login.tsx  SifenPage.tsx
