[project]
name = "intelimarket"
version = "0.1.0"
description = "SaaS ERP verticalizable para comercios y distribuidores en Paraguay"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    # Config & validation
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    # Auth
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "cryptography>=42.0",
    # Tasks & cache
    "celery>=5.3",
    "redis>=5.0",
    # HTTP client
    "httpx>=0.27",
    # XML (SIFEN e-Kuatia)
    "lxml>=5.2",
    "xmltodict>=0.13",
    # PDF generation
    "weasyprint>=62",
    # Excel export
    "openpyxl>=3.1",
    # IA
    "anthropic>=0.28",
    # CLI
    "click>=8.1",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.6",
]

[project.scripts]
intelimarket = "api.src.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
